Avoid showing overflow for quiz pages (BL-9952/BL-9823)

--- a/src/BloomBrowserUI/bloomUI.less
+++ b/src/BloomBrowserUI/bloomUI.less
@@ -23,7 +23,7 @@
 // Bloom's web palette
 @bloom-blue: #1d94a4; // used in decodable reader and various text backgrounds and Paste Image button
 @bloom-lightblue: #b0dee4; // used in a few highlight and hover situations
-@bloom-yellow : #FEBF00;
+@bloom-yellow: #febf00;
 
 @bloom-lightgray: lightgray;
 @bloom-red: #d65649;
@@ -50,6 +50,8 @@
 @accordion-active-element: #59b4d4;
 @form-background: #f0f0f0;
 @bloom-solid-circle-badge-character: "\25cf";
+
+@marginBoxBorderColor: rgba(115, 189, 189, 0.3);
 
 @toolboxWidth: 200px;
 
