--- a/src/BloomBrowserUI/bookEdit/css/editMode.less
+++ b/src/BloomBrowserUI/bookEdit/css/editMode.less
@@ -466,7 +466,7 @@ div.textWholePage ul {
     top: 45%;
 }
 div.marginBox {
-    border: 1px solid rgba(115, 189, 189, 0.3);
+    border: 1px solid @marginBoxBorderColor;
 }
 .bloom-frontMatter div.marginBox {
     /*With the colored background, the margin border is just too distracting, and it doesn't (yet) help the user in any way because he can't move things around on the frontmatter*/
